# chaos

./: CMakeLists.txt  README.md
include/chaos/: enc.h  gen.h
src/: attractor.c  attractor.h  enc.c  gen.c  seed.c  seed.h
test/: main.c
